@@ -512,6 +512,13 @@ class MediaWiki {
 			$expires = time() + $this->config->get( 'DataCenterUpdateStickTTL' );
 			$request->response()->setCookie( 'UseDC', 'master', $expires );
 		}
+
+		// Avoid letting a few seconds of slave lag cause a month of stale data
+		if ( $factory->laggedSlaveUsed() ) {
+			$maxAge = $this->config->get( 'CdnMaxageLagged' );
+			$this->context->getOutput()->lowerCdnMaxage( $maxAge );
+			wfDebugLog( 'caches', "Lagged DB used; CDN cache TTL limited to $maxAge seconds" );
+		}
 	}
 
 	/**
