@@ -236,6 +236,8 @@ class OutputPage extends ContextSource {
 
 	/** @var int Cache stuff. Looks like mEnableClientCache */
 	protected $mSquidMaxage = 0;
+	/** @var in Upper limit on mSquidMaxage */
+	protected $mCdnMaxageLimit = INF;
 
 	/**
 	 * @var bool Controls if anti-clickjacking / frame-breaking headers will
@@ -1945,7 +1947,18 @@ class OutputPage extends ContextSource {
 	 * @param int $maxage Maximum cache time on the Squid, in seconds.
 	 */
 	public function setSquidMaxage( $maxage ) {
-		$this->mSquidMaxage = $maxage;
+		$this->mSquidMaxage = min( $maxage, $this->mCdnMaxageLimit );
+	}
+
+	/**
+	 * Lower the value of the "s-maxage" part of the "Cache-control" HTTP header
+	 *
+	 * @param int $maxage Maximum cache time on the Squid, in seconds
+	 * @since 1.27
+	 */
+	public function lowerCdnMaxage( $maxage ) {
+		$this->mCdnMaxageLimit = $this->min( $maxage, $this->mCdnMaxageLimit );
+		$this->setSquidMaxage( $this->mSquidMaxage );
 	}
 
 	/**
